--- a/bitcoin-bar/package.json
+++ b/bitcoin-bar/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "weatherbar",
-  "displayName": "WeatherBar",
-  "description": "Display the weather info directly on your status bar",
-  "version": "1.0.1",
+  "name": "bitcoin-bar",
+  "displayName": "Bitcoin-Bar",
+  "description": "Bitcoin price in the VS Code status bar",
+  "version": "0.0.1",
   "engines": {
-    "vscode": "^1.57.0"
+    "vscode": "^1.58.0"
   },
   "categories": [
     "Other"
@@ -16,8 +16,8 @@
   "contributes": {
     "commands": [
       {
-        "command": "WeatherBar.updateConfiguration",
-        "title": "Update Weather"
+        "command": "bitcoin-bar.helloWorld",
+        "title": "Hello World"
       }
     ]
   },
@@ -33,8 +33,7 @@
     "@types/glob": "^7.1.3",
     "@types/mocha": "^8.2.2",
     "@types/node": "14.x",
-    "@types/request-promise": "^4.1.47", 
-    "@types/vscode": "^1.57.0",
+    "@types/vscode": "^1.58.0",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.26.0",
     "eslint": "^7.27.0",
@@ -44,7 +43,7 @@
     "vscode-test": "^1.5.2"
   },
   "dependencies": {
-    "dotenv": "^10.0.0",
+    "@types/request-promise": "^4.1.48",
     "request-promise": "^4.2.6"
   }
 }
